# pbdMR

./: .gitignore  DESCRIPTION  NAMESPACE  NOTE  README.md  cleanup  configure  configure.ac
R/: asserters.r  create.r  options.r  pbdMR-package.R  zzz.r
man/: mr_copy.Rd  mr_create.Rd  pbdMR-package.Rd
src/: Makevars.in  create.c  oprions.c
